@@ -8,7 +8,7 @@ includedir=@includedir@
 docdir=${datarootdir}/doc/@CLUTTER_GTKMM_MODULE_NAME@
 doxytagfile=${docdir}/reference/@CLUTTER_GTKMM_MODULE_NAME@.tag
 htmlrefdir=${docdir}/reference/html
-htmlrefpub=http://library.gnome.org/@PACKAGE_TARNAME@/unstable/
+htmlrefpub=http://library.gnome.org/devel/@PACKAGE_TARNAME@/unstable/
 
 Name: clutter-gtkmm
 Description: C++ binding for clutter-gtk
